Autotools and Doxygen support

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,32 @@
-*~*
-*#*
-<<<<<<< HEAD
-*a.out*
-=======
->>>>>>> 699a4f13b7c67e9133800d1cef661c1d312b9892
+aclocal.m4
+Makefile.in
+configure
+Makefile
+.deps/*
+src/.deps*
+config.log
+config.status
+autom4te.cache/*
+configure.scan
+.DS_Store*
+*.dirstamp
+*.o*
+*~
+*.vtk
+*.orig
+*.tar.gz
+*.bkp
+*.log
+*.cc~
+*.h~
+*.cc#
+*.h#
+*.tcc~
+*.tcc#
+dem_grain_gen
+*.gcda*
+*.gcno*
+*coverage.info*
+src/*#
+include/*#
+doc/*
